--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="./src/assets/images/logo-3.png" href="" /> -->
+    <link
+      rel="shortcut icon"
+      href="./src//assets//images/logo-3.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Let's Learn</title>
   </head>
   <body>
     <div id="root"></div>
